--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "^1.5.6",
-    "react-native-image-picker": "^2.3.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
@@ -30,7 +29,10 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.2.2",
-    "react-navigation-tabs": "^2.8.2"
+    "react-navigation-tabs": "^2.8.2",
+    "expo-image-picker": "~8.0.1",
+    "expo-permissions": "~8.0.0",
+    "expo-constants": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
