Added jwt decoder

--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@react-navigation/stack": "^5.1.1",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-constants": "~8.0.0",
+    "expo-image-picker": "~8.0.1",
+    "expo-permissions": "~8.0.0",
     "expo-secure-store": "~8.0.0",
+    "jwt-decode": "^2.2.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -29,10 +33,7 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.2.2",
-    "react-navigation-tabs": "^2.8.2",
-    "expo-image-picker": "~8.0.1",
-    "expo-permissions": "~8.0.0",
-    "expo-constants": "~8.0.0"
+    "react-navigation-tabs": "^2.8.2"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
